<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayFragment">

    <ImageView
        android:id="@+id/info"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/icons8_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/chaalSiren"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/blind"
        app:layout_constraintBottom_toBottomOf="@id/logoImage"
        app:layout_constraintEnd_toStartOf="@+id/logoImage" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/teenpatti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countText"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toEndOf="@id/logoImage"
        tools:text="4" />

    <TextView
        android:id="@+id/chaalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/chaal_string"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/potAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <TextView
        android:id="@+id/potAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/pot_string"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/chaalAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chaalAmount" />

    <Button
        android:id="@+id/doubleBtn"
        style="@style/Button.Chaal"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/double_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chaalAmount" />

    <Button
        android:id="@+id/continueBtn"
        style="@style/Button.Chaal"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/chaal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doubleBtn" />

    <Button
        android:id="@+id/packBtn"
        style="@style/Button.Chaal"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/pack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continueBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>